# rag-chunking-lab

./: .env.example  ARCHITECTURE.md  RAG_LESSONS.md  README.md  app.py  pyproject.toml
rag/: pipeline.py
